Clase05/05-despliegue-gpc/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: gcr.io/cursodocker06/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
