Clase05/05-despliegue-gpc/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2-app
  template:
    metadata:
      labels:
        app: backend2-app
    spec:
      containers:
        - name: backend2-container
          image: gcr.io/cursodocker06/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
